--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ anyio==3.5.0
 asgiref==3.5.1
 asyncpg==0.25.0
 autopep8==1.6.0
-black==22.10.0
 cffi==1.15.0
 click==8.1.3
 cryptography==37.0.2
@@ -13,10 +12,7 @@ fastapi==0.75.2
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
-mypy-extensions==0.4.3
 passlib==1.7.4
-pathspec==0.10.2
-platformdirs==2.5.4
 psycopg2-binary==2.9.3
 pyasn1==0.4.8
 pycodestyle==2.8.0
@@ -31,6 +27,5 @@ sniffio==1.2.0
 SQLAlchemy==1.4.36
 starlette==0.17.1
 toml==0.10.2
-tomli==2.0.1
-typing-extensions==4.2.0
+typing_extensions==4.2.0
 uvicorn==0.17.6
